[package]
name = "neat"
version = "0.1.0"
authors = ["jspspike <jspspike@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
indexmap = { version = "1.3.2", features=["serde-1"] }
rayon = "1.3.0"
serde = { version = "1.0.115", features=["derive"] }

[dev-dependencies]
snake = { path = "../snake" }

[profile.release]
lto = true
